# Python-Reverse-Tutorial

./: .gitattributes  .gitignore  .lfsconfig  .yarnrc.yml  README.md  package.json  pyproject.toml
Day1/src/: README.md
Day1/src/Demo_01/: demo1.js  demo1.py
Day1/src/Demo_02/: demo2.js  demo2.py
Day1/src/Homework_01/: main.js  main.py
Day1/src/Homework_02/: main.js
Day2/src/Demo_01/: demo1.js
Day2/src/Demo_02/: main.js  main.py
Day4/src/: Bilibili_Popular.py  Music_Cracker.py
Meituan/: README.md
Meituan/src/: .gitignore  document.json.template  main.js
Qichacha/: README.md
Qichacha/src/: encrypt.js
Qizhidao/: README.md
Qizhidao/src/: decrypt.js  hook.js  response.json
Youdao_Fanyi/: README.md
Youdao_Fanyi/src/: app.js  decrypt.js  encrypt.js  main.js  main.py  snippets.js
Youdao_Fanyi/src/decrypt/: chunk-vendors.js
